--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx4096M
 
 # Fabric Properties
-	# check these on https://modmuss50.me/fabric.html
-	minecraft_version=1.19.4
-	yarn_mappings=1.19.4+build.2
-	loader_version=0.14.20
+	# check these on https://fabricmc.net/develop/
+	minecraft_version=1.20.4
+	yarn_mappings=1.20.4+build.3
+	loader_version=0.15.3
 
 # Mod Properties
 	mod_version = 1.0.0
@@ -13,5 +13,5 @@ org.gradle.jvmargs=-Xmx1G
 	archives_base_name = dev.ShingWong08.FirstMod.FirstMod
 
 # Dependencies
-	# check this on https://modmuss50.me/fabric.html
-	fabric_version=0.82.0+1.19.4
+	# check this on https://fabricmc.net/develop/
+	fabric_version=0.91.3+1.20.4
